# rich_phantoms

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs
tests/compile-fail/: co_inherit_neg.rs  co_never.rs  con_inherit_neg.rs  con_never.rs  in_inherit_neg.rs  in_never.rs
tests/run-pass/: co_always.rs  co_inherit_pos.rs  coalways_proof.rs  coinherit_proof.rs  con_always.rs  con_inherit_pos.rs  conalways_proof.rs  conever_proof.rs  coninherit_proof.rs  connever_proof.rs  in_always.rs  in_inherit_pos.rs
tests/run-pass-stability/: co_always_staged_api.rs
