[package]
name = "rich-phantoms"
version = "0.1.0"
authors = ["David McGillicuddy <contact@djmcgill.co.uk>"]
edition = "2018"
description = "Phantom types with control over variance and sync/sync inheritance"
license = "MIT OR Apache-2.0"

[dev-dependencies]
compiletest_rs = { version = "0.3", features = ["stable"] }

[features]
unstable-test = []
